src/app/navBar/navBar.scss
$font-stack: Helvetica, sans-serif;
$primary-color: #333;

body {
  font: 100% $font-stack;
  color: $primary-color;
}

nav {
  position: fixed;
  top: 0;
  z-index: 20;
}

.navbarbg {
  background-color: #880038;
  height: 50px;
}

.navbarbg a {
  margin-top: -0.21em;
}

.fa-play-circle {
  margin-top: -0.25em;
}

#iconRight {
  display: flex;
  justify-content: space-between;
}

.Logo {
  margin-left: 30px;
  position: relative !important;
}

@media screen and (max-width: 992px) {
  .brand-logo {
    margin-left: 125px !important;
  }
}

.show {
  list-style: none;
  margin-left: 100px !important;
}

nav ul li {
  color: #5ed3f1;
}

.categories {
  margin-left: 20%;
}

